# polari

./: .editorconfig  .eslintrc.json  .eslintrc.yml  .gitignore  .gitlab-ci.yml  0001-Added-documentation.patch  0001-configure-bump-gtk-version.patch  AUTHORS  Makefile.am  NEWS  README.md  REUSE.toml  autogen.sh  configure.ac  gobject-linter.toml  meson.build  meson.format  meson_options.txt  org.gnome.Polari-unstable.json  org.gnome.Polari.json  polari.doap  quotes
.gitlab-ci/: check-commit-log.sh  commit-rules.yml  commitrules.yml  install-meson-project.sh  run-eslint.sh
.reuse/: dep5
LICENSES/: GPL-2.0-or-later.txt
build-aux/flatpak/: fixup-mozjs-38.sh  idle-build-fix.patch  meson-work-around-0-mtime.patch  mesonlib-Use-lib-as-default-libdir.patch  org.gnome.Polari.json
build-aux/meson/: meson-postinstall.sh
data/: Makefile.am  Polari.client  meson.build  org.freedesktop.Telepathy.Client.Polari.service.in  org.gnome.Polari.Autostart.desktop  org.gnome.Polari.data.gresource.xml  org.gnome.Polari.desktop.in  org.gnome.Polari.gschema.xml  org.gnome.Polari.lib.gresource.xml  org.gnome.Polari.service.in  org.gnome.polari.gschema.xml  org.gnome.polari.gschema.xml.in  polari.desktop.in  polari.gresource.xml
data/appdata/: Makefile.am  meson.build  org.gnome.Polari.appdata.xml.in
data/css/: style.css
data/icons/: Makefile.am  REUSE.toml  meson.build
data/icons/hicolor/scalable/apps/: org.gnome.Polari.Devel.svg.license  org.gnome.Polari.svg.license
data/icons/hicolor/symbolic/apps/: org.gnome.Polari-symbolic.svg.license
data/metainfo/: meson.build  org.gnome.Polari.metainfo.xml.in
data/ontologies/: polari.ontology
data/resources/: app-menu.ui  application.css  connection-details-dialog.ui  connection-details.ui  connection-list-dialog.ui  connection-properties.ui  entry-area.ui  help-overlay.ui  initial-setup-window.ui  join-room-dialog.ui  main-window.ui  menus.ui  message-user-dialog.ui  networks.json  nick-popover.ui  people-symbolic.svg.license  polari.ontology  result-list-row.ui  room-list-header.ui  room-list-row.ui  room-options.ui  server-room-list.ui  style.css  user-details.ui  user-list-details.ui  user-popover.ui
data/sparql/: count-results.rq  get-context.rq  get-room-events-forward.rq  get-room-events.rq  search-messages.rq
data/ui/: connection-properties.ui  entry-area.ui  help-overlay.ui  join-room-dialog.ui  main-window.ui  nick-popover.ui  room-list-header.ui  room-list-row.ui  search-row.ui  search-section.ui  server-room-list.ui  shortcuts-dialog.ui  user-details.ui  user-list.ui  user-popover.ui
flatpak/: gspell-gettext-fix.patch  gspell-no-code-coverage.patch  org.gnome.Polari-stable.json  org.gnome.Polari-unstable.json  org.gnome.Polari.json  tp-glib-casts.patch  tp-idle-fix-warning.patch  tp-idle-long-messages.patch  tp-idle-python3.patch  tp-mc-fix-prop-name.patch  tp-mc-python3.patch  tpl-drop-intltool.patch  tpl-override-basedir.patch  tpl-python3.patch  work-around-regressions.patch  xslt-config
help/: LINGUAS  Makefile.am  meson.build
help/C/: account-irc.page  index.page  introduction.page  irc-commands.page  irc-join-room.page  irc-nick-password.page  irc-start-conversation.page  network-connect-custom.page  network-connect-preconfigured.page  network-connect.page  overview.page  sharing.page  start.page
help/bg/: bg.po
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/eu/: eu.po
help/fr/: fr.po
help/hu/: hu.po
help/id/: id.po
help/nl/: nl.po
help/pl/: pl.po
help/pt/: pt.po
help/pt_BR/: pt_BR.po
help/ru/: ru.po
help/sr/: sr.po
help/sv/: sv.po
help/tr/: tr.po
help/uk/: uk.po
lint/: eslintrc-gjs.json  eslintrc-gjs.yml  eslintrc-legacy.json  eslintrc-polari.json  eslintrc-polari.yml  generate-report.sh
meson/: check-version.py
po/: LINGUAS  Makevars  POTFILES.in  af.po  ar.po  as.po  be.po  bg.po  bs.po  ca.po  ca@valencia.po  ckb.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hi.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  ka.po  kk.po  ko.po  lo.po  lt.po  lv.po  (+27 more)
src/: Makefile-lib.am  Makefile.am  accountsMonitor.js  appNotifications.js  application.js  chatView.js  chatroomManager.js  config.js.in  connections.js  emojiPicker.js  entryArea.js  gtkShim.js  initialSetup.js  ircParser.js  joinDialog.js  logManager.js  logger.js  logging.js  main.js  mainWindow.js  meson.build  messageDialog.js  messageHistory.js  networksManager.js  notify.js  org.gnome.Polari.in  org.gnome.Polari.src.gresource.xml  org.gnome.Polari.src.gresource.xml.meson  pasteManager.js  polari-accounts.in  polari-log-tool.c  polari.c  polari.in  resultList.js  resultStack.js  resultView.js  roomList.js  roomManager.js  roomOptions.js  roomStack.js  (+9 more)
src/lib/: polari-client-factory.c  polari-client-factory.h  polari-drag-helper.c  polari-drag-helper.h  polari-fixed-size-frame.c  polari-fixed-size-frame.h  polari-message-private.h  polari-message.c  polari-message.h  polari-room.c  polari-room.h  polari-tp-autocleanup.h  polari-tpl-importer.c  polari-tpl-importer.h  polari-util.c  polari-util.h
src/tests/: meson.build  test-util.c
tools/: eslint.config.js  package-lock.json  package.json  run-eslint.sh
xdg-app/: Makefile.am  manifest.json
