@YELP_HELP_RULES@

HELP_ID=$(APP_ID)

HELP_FILES = \
	index.page \
	introduction.page \
	irc-commands.page \
	irc-join-room.page \
	irc-nick-password.page \
	irc-start-conversation.page \
	legal.xml \
	network-connect.page \
	overview.page \
	sharing.page

HELP_MEDIA = \
	images/polari-paste.png \
	images/polari-screenshot.png \
	images/Polari.png

HELP_LINGUAS = cs de es fr hu pt_BR sv
