gnome.yelp(app_id,
           sources: ['index.page',
                     'introduction.page',
                     'irc-commands.page',
                     'irc-join-room.page',
                     'irc-nick-password.page',
                     'irc-start-conversation.page',
                     'legal.xml',
                     'network-connect.page',
                     'overview.page',
                     'sharing.page'],
           media: ['images/polari-paste.png',
                   'images/polari-screenshot.png',
                   'images/Polari.png'],
           languages: ['cs', 'de', 'fr', 'hu', 'pt_BR', 'sv'])
