gnome.yelp(app_id,
           sources: ['account-irc.page',
                     'index.page',
                     'introduction.page',
                     'irc-commands.page',
                     'irc-join-room.page',
                     'irc-nick-password.page',
                     'irc-start-conversation.page',
                     'legal.xml',
                     'network-connect.page',
                     'overview.page',
                     'sharing.page'],
           media: ['images/main.png',
                   'images/polari-paste.png',
                   'images/Polari.png'],
           languages: ['cs', 'de', 'fr', 'hu', 'pt_BR', 'sv'])
