# SPDX-FileCopyrightText: 2016 Florian Müllner <fmuellner@gnome.org>
#
# SPDX-License-Identifier: GPL-2.0-or-later

gnome.yelp(
  meson.project_name(),
  sources: [
    'index.page',
    'introduction.page',
    'irc-commands.page',
    'irc-join-room.page',
    'irc-nick-password.page',
    'irc-start-conversation.page',
    'legal.xml',
    'network-connect.page',
    'overview.page',
    'sharing.page',
  ],
  media: [
    'images/polari-paste.png',
    'images/polari-screenshot.png',
    'images/Polari.png',
  ],
)
